@@ -17,10 +17,13 @@ With this tool you can:
 ### Other Systems
 1. Go to realises and download the FunctionVisualizer_jar.zip folder
 2. Extract the JAR on your system
-3. Download the JavaFX runtime: ```sudo apt install openjfx```
+3. Check that you have Java on your System with: ```java --version```
+3.1. If it's not so, add the following repository to apt: <br>```sudo add-apt-repository ppa:openjdk-r/ppa```<br>, <br>```sudo apt update```<br>
+3.2. Then install Java: ```sudo apt install openjdk-17-jre-headless```
+4. Download the JavaFX runtime: ```sudo apt install openjfx```
    <br>Or install manually <a href="https://gluonhq.com/products/javafx/">here<a><br>
+5. Add your JavaFX path to the system variables: ```export PATH_TO_FX=/usr/share/openjfx/lib```
+6. Start the programm: ```java --module-path $PATH_TO_FX --add-modules javafx.controls -jar FunctionVisualizer_v1.1.jar```
 
-4. 
-
-## When you have problems, please inform me under the menuitem "issues".
+When you have problems, please inform me under the menuitem "issues".
 
